[package]
name = "particles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
good-web-game = "0.5.0"
rand = "0.8.5"
getrandom = { version = "0.2.6", features = ["js"] } # https://docs.rs/getrandom/latest/getrandom/#webassembly-support

